remove package lock

--- a/docs/0.md
+++ b/docs/0.md
@@ -1,4 +1,5 @@
 
+
 https://cdn.jsdelivr.net/gh/INTUITION-dev/mbToolBelt@v3.12.100/src/toolBelt.js
 
 
@@ -6,19 +7,5 @@ https://cdn.jsdelivr.net/gh/INTUITION-dev/mbToolBelt@v3.12.100/src/toolBelt.js
 # sudo gem install git_fame
 git fame --after=2019-08-19 --by-type --sort=commits --exclude=*.lock,*.html,*.sh,*.json
 
-
-
-
-apt install php-fpm
-
-apt-get install php-mbstring
-apt-get install php-xml
-apt-get install php-curl
-apt install zip unzip php-zip
-composer update
-
-
-
-php -v
-
+netstat -tlnp
 
